tasks/testsuite/fixtures/parser-misc/pass/tests-issue-319-1.js
obj(({ async f() { await g(); } }));