tasks/testsuite/fixtures/parser-misc/fail/stmt-await-in-function.js
function foo (p) { await p; }